AUV_ws/log/build_2020-10-15_17-26-04/gate_detection/stderr.log
  File "/home/fatma/AUV_ws/install/gate_detection/lib/python3.6/site-packages/gate_detection/server_node.py", line 186
    x==0 and y==0:0
    ^
SyntaxError: invalid syntax

